Bug 1685048 - Do not report NS_ERROR_NOT_IMPLEMENTED when an addressbook is imported from a text file successfully. r=darktrojan

Differential Revision: https://phabricator.services.mozilla.com/D101139

--HG--
extra : amend_source : be3bdba13c22b20a1e0bb4f6c3e5c5701547aecc